fix editor control spacing

--- a/src/components/Editor/EditorInterface.css
+++ b/src/components/Editor/EditorInterface.css
@@ -46,7 +46,7 @@
 }
 
 .nc-entryEditor-controlPane {
-  padding: 0 14px 14px;
+  padding: 0 16px 16px;
   position: relative;
   overflow-x: hidden;
 }
